# yew-bevy

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
game/: Cargo.toml
game/src/: main.rs
src/: app.rs  lib.rs
static/: index.html  index.js
