[package]
name = "yew and bevy"
description = "A test on how to integrate the two crates"
version = "0.1.0"
authors = ["Kauly <kauly@hotmail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.80"
wee_alloc = { version = "0.4.5", optional = true }
yew = "0.19.3"
wasm-logger = "0.2.0"

 
 
